--- a/about.html
+++ b/about.html
@@ -595,7 +595,9 @@
                             </div>
                         </div>
                         <textarea class="form-control" name="" id="" placeholder="Message"></textarea>
-                        <button type="submit" class="all-btn">send your query</button>
+                          <div class="btn-box">
+                            <button type="submit" class="all-btn">send your query</button>
+                          </div>
                     </form>
                 </div>
             </div>
