--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Yantramanav:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/service.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
   </head>
   <body>
     <!--------heroHeader-section----------->
@@ -275,18 +268,18 @@
     <section class="located-section section">
         <div class="container container-new">
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-xl-6 col-lg-6 col-md-6">
                     <div class="contact-details">
                         <div class="flex-box">
                             <ul>
                                 <li>
                                   <div class="row">
-                                    <div class="col-xl-2">
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
                                       <div class="icon">
                                           <i class="fas fa-map-marker-alt"></i>
                                       </div>
                                     </div>
-                                    <div class="col-xl-10">
+                                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                                       <div class="detail">
                                           <span class="title d-block">address</span>
                                           <a href="#">
@@ -298,12 +291,12 @@
                                 </li>
                                 <li>
                                   <div class="row">
-                                    <div class="col-xl-2">
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
                                       <div class="icon sub-head">
                                           <i class="fas fa-phone-square"></i>
                                       </div>
                                     </div>
-                                    <div class="col-xl-10">
+                                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                                       <div class="detail">
                                           <span class="d-block title">Fax.</span>
                                           <a href="#" class="heading">+61 8790 1703</a>
@@ -313,12 +306,12 @@
                                 </li>
                                 <li>
                                   <div class="row">
-                                    <div class="col-xl-2">
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
                                       <div class="icon sub-head">
                                           <i class="fas fa-fax"></i>
                                       </div>
                                     </div>
-                                    <div class="col-xl-10">
+                                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                                       <div class="detail">
                                           <span class="d-block title">Fax.</span>
                                           <a href="#" class="heading">+61 8790 1703</a>
@@ -328,12 +321,12 @@
                                 </li>
                                 <li>
                                   <div class="row">
-                                    <div class="col-xl-2">
+                                    <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
                                       <div class="icon sub-head">
                                           <i class="fas fa-external-link-alt"></i>
                                       </div>
                                     </div>
-                                    <div class="col-xl-10">
+                                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
                                       <div class="detail">
                                           <span class="title d-block">address</span>
                                           <a href="#">https://www.takang.com</a>
@@ -345,9 +338,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">  
+                <div class="col-xl-6 col-lg-6 col-md-6 px-0">  
                     <div class="location">
-
+                      <iframe class="map-locate" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29472.579007088083!2d88.41647333652953!3d22.57639622868855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275b020703c0d%3A0xece6f8e0fc2e1613!2sSector%20V%2C%20Bidhannagar%2C%20Kolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1660208126784!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -355,7 +348,7 @@
     </section>
     <section class="contact-form section">
         <div class="container container-new">
-            <span class="title"><sup>*</sup>Required Field</span>
+            <h4 class="title"><sup>*</sup>Required Field</h4>
             <form action="">
                 <div class="form-group">
                     <label for="" class="title">Name <sup>*</sup></label>
