--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head> 
   <body>
     <!--------heroHeader-section----------->
-    <header class="hero-section bg-image">
+    <header class="hero-section bg-header">
       <div class="bg-panel" id="navScroll">
         <div class="container container-new">
           <nav class="navbar navigation navbar-expand-xl align-item-center">
