--- a/pages.html
+++ b/pages.html
@@ -13,19 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Yantramanav:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/service.css">
-    <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/pages.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!--------heroHeader-section----------->
-    <header class="page-hero-section bg-image">
+    <header class="page-hero-section bg-header">
       <div class="bg-panel" id="navScroll">
         <div class="container container-new">
           <nav class="navbar navigation navbar-expand-xl align-item-center">
@@ -276,115 +268,103 @@
     <section class="article-section section">
       <div class="container container-new">
         <div class="row">
-          <div class="col-xl-9 col-lg-9 col-md-8">
+          <div class="col-xl-8 col-lg-8 col-md-8 col-sm-10 mx-auto">
             <article>
               <div class="image">
                 <img src="image/Jpg/smaple-1.jpg" alt="">
               </div>
               <div class="content">
-                <h4 class="sub-head">Smart factories and industry 4.0 are the future</h4>
+                <h4 class="blog-heading">Smart factories and industry 4.0 are the future</h4>
                 <span class="sub-title">Super User - News - 17 August 2020</span>
                 <p class="para">The first step of this Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quasi sint odio minima velit necessitatibus.</p>
                 <a href="#" class="btn read-more">Read more</a>
               </div>
             </article>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-md-4">
-            <div class="row mb-4">
-              <div class="col-xl-4">
-                <div class="small-image">
-                  <img src="image/Jpg/smaple-1.jpg" alt="">
-                </div>
-              </div>
-              <div class="col-xl-8">
-                <h5 class="small-head">Smart factories and industry 4.0 are the future</h5>
-                <span class="sub-title">17 August 2020</span>
-              </div>
-            </div>
-            <div class="row mb-4">
-                <div class="col-xl-4">
-                  <div class="small-image">
-                    <img src="image/Jpg/smaple-2.jpg" alt="">
-                  </div>
-                </div>
-                <div class="col-xl-8">
-                  <h5 class="small-head">Smart factories and industry 4.0 are the future</h5>
-                  <span class="sub-title">17 August 2020</span>
-                </div>
-            </div>
-            <div class="row mb-4">
-                <div class="col-xl-4">
-                  <div class="small-image">
-                    <img src="image/Jpg/sample-3.jpg" alt="">
-                  </div>
-                </div>
-                <div class="col-xl-8">
-                  <h5 class="small-head">Smart factories and industry 4.0 are the future</h5>
-                  <span class="sub-title">17 August 2020</span>
-                </div>
-            </div>
-            <div class="row mb-4">
-                <div class="col-xl-4">
-                  <div class="small-image">
-                    <img src="image/Jpg/smaple-4.jpg" alt="">
-                  </div>
-                </div>
-                <div class="col-xl-8">
-                  <h5 class="small-head">Smart factories and industry 4.0 are the future</h5>
-                  <span class="sub-title">17 August 2020</span>
-                </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xl-9 col-lg-9"> 
             <article>
               <div class="image">
                 <img src="image/Jpg/smaple-2.jpg" alt="">
               </div>
               <div class="content">
-                <h4 class="sub-head">Smart factories and industry 4.0 are the future</h4>
+                <h4 class="blog-heading">Smart factories and industry 4.0 are the future</h4>
                 <span class="sub-title">Super User - News - 17 August 2020</span>
                 <p class="para">The first step of this Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quasi sint odio minima velit necessitatibus.</p>
                 <a href="#" class="btn read-more">Read more...</a>
               </div>
             </article>
-          </div>
-          <div class="col-xl-3 col-lg-3"></div>
-        </div>
-        <div class="row">
-          <div class="col-xl-9 col-lg-9">
             <article>
               <div class="image">
                 <img src="image/Jpg/sample-3.jpg" alt="">
               </div>
               <div class="content">
-                <h4 class="sub-head">Smart factories and industry 4.0 are the future</h4>
+                <h4 class="blog-heading">Smart factories and industry 4.0 are the future</h4>
                 <span class="sub-title">Super User - News - 17 August 2020</span>
                 <p class="para">The first step of this Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quasi sint odio minima velit necessitatibus.</p>
                 <a href="#" class="btn read-more">Read more...</a>
               </div>
             </article>
-          </div>
-          <div class="col-xl-3 col-lg-3"></div>
-        </div>
-        <div class="row">
-          <div class="col-xl-9 col-lg-9">
             <article>
               <div class="image">
                 <img src="image/Jpg/smaple-4.jpg" alt="">
               </div>
               <div class="content">
-                <h4 class="sub-head">Smart factories and industry 4.0 are the future</h4>
+                <h4 class="blog-heading">Smart factories and industry 4.0 are the future</h4>
                 <span class="sub-title">Super User - News - 17 August 2020</span>
                 <p class="para">The first step of this Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quasi sint odio minima velit necessitatibus.</p>
                 <a href="#" class="btn read-more">Read more...</a>
               </div>
             </article>
-          </div>
-          <div class="col-xl-3 col-lg-3"></div>
-        </div>
 
+          </div>
+          <div class="col-xl-4 col-lg-4 col-md-8 col-sm-10 mx-auto">
+            <div class="section-header">
+              <h3 class="blog-heading">Popular Blog</h3>
+            </div>
+            <div class="row mb-4">
+              <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-3">
+                <div class="small-image">
+                  <img src="image/Jpg/smaple-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-xl-8 col-lg-8 col-md-8 col-sm-9 col-sm-9 col-9 pl-0">
+                <h5 class="small-head">Smart factories and industry 4.0 are the future</h5>
+                <span class="sub-title">17 August 2020</span>
+              </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-3">
+                  <div class="small-image">
+                    <img src="image/Jpg/smaple-2.jpg" alt="">
+                  </div>
+                </div>
+                <div class="col-xl-8 col-lg-8 col-md-9 col-sm-9 col-9 pl-0">
+                  <h5 class="small-head">Smart factories and industry 4.0 are the future</h5>
+                  <span class="sub-title">17 August 2020</span>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-3">
+                  <div class="small-image">
+                    <img src="image/Jpg/sample-3.jpg" alt="">
+                  </div>
+                </div>
+                <div class="col-xl-8 col-lg-8 col-md-9 col-sm-9 col-9 pl-0">
+                  <h5 class="small-head">Smart factories and industry 4.0 are the future</h5>
+                  <span class="sub-title">17 August 2020</span>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-3">
+                  <div class="small-image">
+                    <img src="image/Jpg/smaple-4.jpg" alt="">
+                  </div>
+                </div>
+                <div class="col-xl-8 col-lg-8 col-md-9 col-sm-9 col-9 pl-0">
+                  <h5 class="small-head">Smart factories and industry 4.0 are the future</h5>
+                  <span class="sub-title">17 August 2020</span>
+                </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -398,7 +378,7 @@
                   <div class="contact-num">
                     <span class="title-head">call center</span>
                     <div>
-                      <a href="#" class="sub-head">+6231 5000880</a>
+                      <a href="#" class="blog-heading">+6231 5000880</a>
                     </div>
                   </div>
                 </div>
